platform/envoy-gateway/manifests/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-alb
  namespace: envoy-gateway
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: dev-nexus-public-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /auth
    alb.ingress.kubernetes.io/success-codes: "200-399"
    alb.ingress.kubernetes.io/tags: Environment=dev,Project=capstone,ManagedBy=argocd
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: envoy-public-gateway
                port:
                  number: 80
